[package]
name = "light-bounded-vec"
version = "2.0.0"
description = "Bounded and cyclic vector implementations"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
solana = ["solana-program-error"]

[dependencies]
bytemuck = { version = "1.17", features = ["min_const_generics"] }
memoffset = "0.9"
solana-program-error = { version = "2.2.1", optional = true }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
bytemuck = { version = "1.17", features = ["derive"] }
