[package]
name = "light-indexed-merkle-tree"
version = "1.1.0"
description = "Implementation of indexed (and concurrent) Merkle tree in Rust"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
solana = [
  "light-concurrent-merkle-tree/solana",
  "solana-program"
]

[dependencies]
borsh = { version = "0.10" }
light-bounded-vec = { version = "1.1.0" }
light-hasher = { version = "1.1.0" }
light-concurrent-merkle-tree = { version = "1.1.0" }
light-merkle-tree-reference = { version = "1.1.0" }
light-utils = { version = "1.1.0" }
memoffset = "0.9"
num-bigint = "0.4"
num-traits = "0.2"

solana-program = { version="=1.18.22", optional = true }
thiserror = "1.0"

[dev-dependencies]
light-hash-set = { version = "1.1.0" }
thiserror = "1.0"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"