[package]
name = "light-indexed-merkle-tree"
version = "1.1.0"
description = "Implementation of indexed (and concurrent) Merkle tree in Rust"
repository = "https://github.com/Lightprotocol/light-protocol"
license = "Apache-2.0"
edition = "2021"

[features]
solana = [
  "light-concurrent-merkle-tree/solana",
  "solana-program"
]

[dependencies]
light-bounded-vec = { version = "1.1.0", path = "../bounded-vec" }
light-hasher = { version = "1.1.0", path = "../hasher" }
light-concurrent-merkle-tree = { version = "1.1.0", path = "../concurrent" }
light-merkle-tree-reference = { version = "1.1.0", path = "../reference" }
light-utils = { version = "1.1.0" }
num-bigint = "0.4"
num-traits = "0.2"

solana-program = { version="=1.18.22", optional = true }
thiserror = "1.0"

[dev-dependencies]
light-hash-set = { version = "1.1.0" }
thiserror = "1.0"
rand = "0.8"